Changed Logo style

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="header">
         <div class="head_div">
             <div class="head_sub_div1">
-                <p>HMS</p>
+                <p><b>HMS</b></p>
             </div> 
             <div class="head_sub_div2">
                 <ul class="head_menu">
